# jetbackup-remote

./: .gitignore  CLAUDE.md  HANDOVER-deploy-v030.md  README.md  config.example.json  pyproject.toml
.github/workflows/: tests.yml
docs/: INSTALL.md  MANUAL_ES.md  SECURITY.md
docs/superpowers/plans/: 2026-03-14-daemon-loop-reliability-plan.md
docs/superpowers/specs/: 2026-03-13-daemon-loop-reliability-design.md
server/: jetbackup-ssh-gate.sh
src/jetbackup_remote/: __init__.py  __main__.py  cli.py  config.py  jetbackup_api.py  logging_config.py  models.py  notifier.py  orchestrator.py  ssh.py
systemd/: jetbackup-remote.service  jetbackup-remote.timer
tests/: test_cli.py  test_config.py  test_jetbackup_api.py  test_models.py  test_notifier.py  test_orchestrator.py  test_ssh.py
tests/fixtures/: edit_backup_job_success.json  get_backup_job_disabled.json  get_backup_job_idle.json  get_backup_job_running.json  get_destination_disabled.json  get_destination_enabled.json  get_log.json  get_log_item.json  get_queue_group_completed.json  get_queue_group_failed.json  get_queue_group_partial.json  get_queue_group_running.json  list_backup_jobs.json  list_log_items.json  list_logs.json  list_queue_groups_empty.json  list_queue_groups_running.json  list_queue_items.json
